# warpsign

./: .gitignore  README.md  app_patcher.py  apple_account_login.py  arguments.py  bundle_mapper.py  cert_handler.py  ci.py  config.toml.sample  developer_portal_api.py  entitlements_processor.py  github.py  icon_handler.py  ipa_inspector.py  litterbox.py  local_signer.py  logger.py  pyproject.toml  requirements.txt  setup.py  sign-ci.py  sign.py  test_developer_portal.py
patches/: pluginsinject.dylib
src/: app_patcher.py  apple_account_login.py  authentication_helper.py  bundle_mapper.py  developer_portal_api.py  entitlements_processor.py  github.py  ipa_inspector.py  local_signer.py  provisioning_profile_analyser.py  sign_orchestrator.py  sign_orchestrator_mobileprov.py  verification.py
src/apple/: apple_account_login.py  authentication_helper.py  capability_mappings.py
src/ci/: litterbox.py
src/core/: bundle_mapper.py  sign_orchestrator.py  verification.py  verifier.py
src/ipa/: app_patcher.py  provisioning_profile_analyser.py
src/utils/: diff_helper.py  icon_handler.py
tests/: test_developer_portal.py
warpsign/: __init__.py  __main__.py  arguments.py  cli.py  logger.py
warpsign/commands/: __init__.py  setup.py  sign.py  sign_ci.py
warpsign/src/apple/: apple_account_login.py  authentication_helper.py  developer_portal_api.py
warpsign/src/ci/: croc_handler.py  github.py
warpsign/src/constants/: cli_constants.py  config.toml.sample  conflicts.py
warpsign/src/core/: bundle_mapper.py  cert_handler.py  sign_orchestrator.py  verification.py  (+1 more)
(+16 files in other folders)
